# napari-timeseries-opener-plugin

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  tox.ini
src/napari_timeseries_opener_plugin/: _dock_widget.py
src/napari_timeseries_opener_plugin/_tests/: test_dock_widget.py
