[metadata]
name = napari-timeseries-opener-plugin

author = Niklas Netter
author_email = niknett@gmail.com
url = https://github.com/gatoniel/napari-timeseries-opener-plugin
license = BSD-3-Clause
description = Simple plugin that opens separate .tif files as a 3-dimensional layer.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/gatoniel/napari-timeseries-opener-plugin/issues
    Documentation = https://github.com/gatoniel/napari-timeseries-opener-plugin#README.md
    Source Code = https://github.com/gatoniel/napari-timeseries-opener-plugin
    User Support = https://github.com/gatoniel/napari-timeseries-opener-plugin/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-timeseries-opener-plugin = napari_timeseries_opener_plugin
